--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 }
 
 :root {
+  --primaryColor: #333;
   --dark: #282828;
   --elementPaddingInside: 0.7em;
   --elementPaddingOutside: 1.5em;
@@ -38,7 +39,8 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--dark);
+    // background-color: var(--dark);
+    box-shadow: inset 0 0 5em 4em var(--dark);
     padding: 7em;
     canvas {
       display: flex;
@@ -46,13 +48,23 @@ img {
       align-items: center;
       max-width: 100%;
     }
+    img {
+      //   display: flex;
+      //   justify-content: center;
+      //   align-items: center;
+      //   max-width: 100%;
+      //   position: absolute;
+      width: inherit;
+      position: absolute;
+      z-index: -1;
+    }
   }
   .controlsWrapper {
     width: 35%;
     padding: 3em;
     select,
     input {
-      padding: var(--elementPaddingInside);
+      padding: var(--elementPaddingInside) 0;
       width: 100%;
       //   border: 1px solid var(--borderColor);
     }
@@ -91,7 +103,7 @@ $tabs-base-color: #ecf0f1;
       position: relative;
       top: 3px;
       transition: all 0.2s ease-in-out;
-      background-color: #f0f8ff;
+      background-color: darken(#f0f8ff, 10%);
       &:hover {
         background: darken($tabs-base-color, 10);
       }
@@ -105,9 +117,23 @@ $tabs-base-color: #ecf0f1;
       padding: 15px 0;
       position: absolute;
       left: 0;
+      div {
+        width: 2.4em;
+        height: 2em;
+        display: inline-flex;
+        padding: 0.1em 0.5em;
+        padding-left: 0;
+      }
+      .code {
+        display: block;
+        position: absolute;
+        font-size: 0.6em;
+        bottom: 7px;
+      }
     }
     [id^="tab"]:checked + label {
-      background: #8ee4ff;
+      background: var(--primaryColor);
+      color: #fff;
     }
     [id^="tab"]:checked ~ [id^="tab-content"] {
       display: block;
