--- a/style.scss
+++ b/style.scss
@@ -28,6 +28,7 @@ img {
 
 .main {
   display: flex;
+  flex-direction: column;
   height: 100vh;
   .return {
     position: absolute;
@@ -35,28 +36,29 @@ img {
     left: 25px;
   }
   .imageWrapper {
-    width: 65%;
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    // background-color: var(--dark);
+    // justify-content: center;
+    // align-items: center;
     box-shadow: inset 0 0 5em 4em var(--dark);
-    padding: 7em;
+    // padding: 7em;
+    position: relative;
+    height: 100vh;
     canvas {
+      height: 0.5vh;
       display: flex;
       justify-content: center;
       align-items: center;
       max-width: 100%;
-    }
-    img {
-      //   display: flex;
-      //   justify-content: center;
-      //   align-items: center;
-      //   max-width: 100%;
-      //   position: absolute;
-      width: inherit;
       position: absolute;
-      z-index: -1;
+    }
+    .view {
+      height: 0.5vh;
+      img {
+        z-index: -1;
+        position: absolute;
+        width: 100%;
+      }
     }
   }
   .controlsWrapper {
